structer project FE

--- a/angular/symphony/src/app/app.component.html
+++ b/angular/symphony/src/app/app.component.html
@@ -1,1 +1,5 @@
-<app-hompages></app-hompages>
+<div class="main">
+    <app-header-user *ngIf="!isInAdminPage()"></app-header-user>
+    <router-outlet />
+    <app-footer-user *ngIf="!isInAdminPage()"></app-footer-user>
+</div>
