--- a/angular/symphony/src/app/components/user/layout/header/header.component.html
+++ b/angular/symphony/src/app/components/user/layout/header/header.component.html
@@ -1,3 +1,18 @@
 <header>
-    Header USER
+  <div>
+    <div class="div-menu">
+      <img class="logo-aptech" src="/assets/images/logo-aptech.png" />
+      <button class="btn-menu" mat-button>Tuyển sinh</button>
+      <button class="btn-menu" mat-button>
+        Khóa học
+      </button>
+      <button class="btn-menu" mat-button>Giới thiệu</button>
+      <button class="btn-menu" mat-button>Liên hệ</button>
+      <button class="btn-advise">
+        <span style="padding-right: 10px;">
+          <i aria-hidden="true" class="far fa-envelope"></i> </span
+        >Tư vấn ngay
+      </button>
+    </div>
+  </div>
 </header>
