menu , khóa học

--- a/angular/symphony/src/app/pages/user/homepages/register-consultation/register-consultation.component.css
+++ b/angular/symphony/src/app/pages/user/homepages/register-consultation/register-consultation.component.css
@@ -44,4 +44,9 @@ mat-form-field {
 .div-populated{
   width: 100%;
 }
-
+.elementskit-section-subtitle  {
+  color: white;
+  text-align: center;
+  font-size: 17px;
+  font-weight: 500;
+}
