--- a/angular/symphony/src/app/components/user/layout/header/header.component.html
+++ b/angular/symphony/src/app/components/user/layout/header/header.component.html
@@ -1,18 +1,132 @@
 <header>
-  <div>
-    <div class="div-menu">
-      <img class="logo-aptech" src="/assets/images/logo-aptech.png" />
-      <button class="btn-menu" mat-button>Tuyển sinh</button>
-      <button class="btn-menu" mat-button>
-        Khóa học
-      </button>
-      <button class="btn-menu" mat-button>Giới thiệu</button>
-      <button class="btn-menu" mat-button>Liên hệ</button>
-      <button class="btn-advise">
-        <span style="padding-right: 10px;">
-          <i aria-hidden="true" class="far fa-envelope"></i> </span
-        >Tư vấn ngay
-      </button>
+  <div class="ekit-template-content-markup ekit-template-content-header">
+    <div
+      data-elementor-type="wp-post"
+      data-elementor-id="52451"
+      class="elementor elementor-52451 div-menu"
+    >
+      <section
+        class="elementor-section elementor-top-section elementor-element elementor-element-f0e54b8 elementor-section-content-middle elementor-section-stretched she-header-yes elementor-section-boxed elementor-section-height-default elementor-section-height-default she-header"
+        data-id="f0e54b8"
+        data-element_type="section"
+        data-settings='{"stretch_section":"section-stretched","background_background":"classic","transparent":"yes","transparent_on":["desktop","tablet","mobile"],"scroll_distance":{"unit":"px","size":60,"sizes":[]},"scroll_distance_tablet":{"unit":"px","size":"","sizes":[]},"scroll_distance_mobile":{"unit":"px","size":"","sizes":[]}}'
+        style="width: 1903px; left: 0px"
+      >
+        <div class="elementor-background-overlay"></div>
+        <div class="elementor-container elementor-column-gap-no row">
+          <div
+            class="elementor-column elementor-col-33 elementor-top-column elementor-element elementor-element-b896070 col-3"
+            data-id="b896070"
+            data-element_type="column"
+          >
+            <div class="elementor-widget-wrap elementor-element-populated">
+              <div
+                class="elementor-element elementor-element-78591e6 elementor-widget elementor-widget-image"
+                data-id="78591e6"
+                data-element_type="widget"
+                data-widget_type="image.default"
+              >
+                <div class="elementor-widget-container">
+                  <a routerLink="/">
+                    <img
+                      src="/assets/images/logo-aptech.png"
+                      class="elementor-animation-shrink"
+                      loading="lazy"
+                    />
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div
+            class="elementor-column elementor-col-33 elementor-top-column elementor-element elementor-element-0f608d9 col-6"
+            data-id="0f608d9"
+            data-element_type="column"
+            data-settings='{"background_background":"classic"}'
+          >
+            <div class="elementor-widget-wrap elementor-element-populated">
+              <div
+                class="elementor-element elementor-element-a5cbe3a eael-simple-menu-hamburger-align-center eael_simple_menu_hamburger_disable_selected_menu_hide eael-hamburger--mobile elementor-widget elementor-widget-eael-simple-menu eael-hamburger--not-responsive"
+                data-id="a5cbe3a"
+                data-element_type="widget"
+                data-widget_type="eael-simple-menu.default"
+              >
+                <div class="elementor-widget-container">
+                  <div
+                    class="eael-simple-menu-container eael-simple-menu-align-center eael-simple-menu--stretch eael-simple-menu-dropdown-align-left preset-1"
+                  >
+                    <span class="eael-simple-menu-toggle-text"></span>
+                    <ul
+                      id="menu-menu1"
+                      class="eael-simple-menu eael-simple-menu-dropdown-animate-zoom-in eael-simple-menu-indicator eael-hamburger-left eael-simple-menu-horizontal"
+                    >
+                      <li
+                        id="menu-item-62676"
+                        class="menu-item menu-item-type-post_type menu-item-object-page menu-item-62676"
+                      >
+                        <a routerLink="/admissions">TUYỂN SINH</a>
+                      </li>
+                      <li
+                        id="menu-item-52656"
+                        class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-52656"
+                      >
+                        <a
+                          >KHÓA HỌC
+                          <span class="eael-simple-menu-indicator">
+                            <i
+                              aria-hidden="true"
+                              class="fas fa-angle-down"
+                            ></i></span
+                        ></a>
+                        <ul class="sub-menu">
+                          <li
+                            *ngFor="let items of list_menu"
+                            class="menu-item menu-item-type-post_type menu-item-object-page menu-item-52657"
+                          >
+                            <a>{{ items.Name }}</a>
+                            @if (items.Child.length >0) {
+                            <ul class="sub-menu">
+                              <li
+                                *ngFor="let item of items.Child"
+                                class="menu-item menu-item-type-post_type menu-item-object-page menu-item-52643"
+                              >
+                                <a>{{ item.Name }}</a>
+                              </li>
+                            </ul>
+                            <span class="eael-simple-menu-indicator">
+                              <i class="fas fa-chevron-down"></i
+                            ></span>
+                            }
+                          </li>
+                        </ul>
+                        <span class="eael-simple-menu-indicator">
+                          <i aria-hidden="true" class="fas fa-angle-down"></i
+                        ></span>
+                      </li>
+                      <li
+                        id="menu-item-55280"
+                        class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-55280"
+                      >
+                        <a>GIỚI THIỆU</a>
+                        <a>LIÊN HỆ</a>
+                      </li>
+                    </ul>
+                    <button class="eael-simple-menu-toggle">
+                      <i aria-hidden="true" class="icon icon-menu-11"></i>
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-3" style="text-align: left">
+            <button class="btn-advise">
+              <i aria-hidden="true" class="far fa-envelope"></i>
+              TƯ VẤN NGAY
+            </button>
+          </div>
+        </div>
+      </section>
     </div>
   </div>
 </header>
