--- a/angular/symphony/src/app/pages/user/homepages/list-course/list-course.component.html
+++ b/angular/symphony/src/app/pages/user/homepages/list-course/list-course.component.html
@@ -1,1 +1,42 @@
-<p>list-course works!</p>
+<div class="row">
+  <div class="col-2"></div>
+  <div class="col-8">
+    <h2 class="title">Các khóa học sắp khai giảng</h2>
+    <div class="row">
+      <div class="col-4" *ngFor="let partner of list_course">
+        <div class="">
+          <img [src]="partner.image" alt="" style="width: 100%;"/>
+          <p class="title-course">{{ partner.name }}</p>
+          <p class="elementor-image-box-description">{{ partner.description }}</p>
+          <div>
+            <ul class="elementor-icon-list-items">
+              <li class="elementor-icon-list-item">
+                <a href="https://aptech.vn/tuyensinh"><span class="elementor-icon-list-icon">
+                    <i aria-hidden="true" class="fas fa-gift"></i>
+                  </span>
+                  <span class="elementor-icon-list-text">{{partner.discount}}</span>
+                </a>
+              </li>
+              <li class="elementor-icon-list-item">
+                <a href="https://aptech.vn/tuyensinh"><span class="elementor-icon-list-icon">
+                    <i aria-hidden="true" class="fas fa-clock"></i>
+                  </span>
+                  <span class="elementor-icon-list-text">Khai giảng: {{partner.startTime}}</span>
+                </a>
+              </li>
+              <li class="elementor-icon-list-item">
+                <a href="https://aptech.vn/tuyensinh"><span class="elementor-icon-list-icon">
+                    <i aria-hidden="true" class="fas fa-bookmark"></i>
+                  </span>
+                  <span class="elementor-icon-list-text">Thời lượng: 2 - 2.5 năm</span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="col-2"></div>
+    </div>
+  </div>
+  <div class="col-2"></div>
+</div>
