--- a/angular/symphony/src/app/pages/user/homepages/register-consultation/register-consultation.component.html
+++ b/angular/symphony/src/app/pages/user/homepages/register-consultation/register-consultation.component.html
@@ -10,7 +10,7 @@
       TRỞ THÀNH LẬP TRÌNH VIÊN QUỐC TẾ <br />
       NGAY HÔM NAY!
     </h2>
-    <h3>Nhận thông tin chi tiết về khóa học và học bổng</h3>
+    <h3 class="elementskit-section-subtitle">Nhận thông tin chi tiết về khóa học và học bổng</h3>
     <form class="form-res-consultation">
       <mat-form-field>
         <mat-label>Họ và tên</mat-label>
@@ -57,14 +57,15 @@
   </div>
 </div>
 <div class="div-populated row">
-  <div class="col-6" style="text-align: right; padding: 50px 0px">
+  <div class="col-1"></div>
+  <div class="col-5" style="text-align: right; padding: 50px 0px">
     <h2 class="elementor-heading-title elementor-size-default">
       "Chúng tôi không chạy theo công nghệ. <br />Symphony luôn đón đầu công
       nghệ!"
     </h2>
     <img src="/assets/images/populated.png" />
   </div>
-  <div class="col-6"  style="padding: 30px">
+  <div class="col-5"  style="padding: 30px">
     <section>
       <div class="elementor-container elementor-column-gap-wide row">
         <div class="col-6" style="padding: 20px;">
@@ -156,4 +157,6 @@
       </div>
     </section>
   </div>
+  <div class="col-1"></div>
+
 </div>
