--- a/angular/symphony/src/app/components/user/layout/header/header.component.html
+++ b/angular/symphony/src/app/components/user/layout/header/header.component.html
@@ -109,6 +109,7 @@
                       >
                         <a>GIỚI THIỆU</a>
                         <a>LIÊN HỆ</a>
+                        <a routerLink="faq">FAQ</a>
                       </li>
                     </ul>
                     <button class="eael-simple-menu-toggle">
