--- a/angular/symphony/src/app/components/user/layout/footer/footer.component.html
+++ b/angular/symphony/src/app/components/user/layout/footer/footer.component.html
@@ -1,10 +1,9 @@
 <footer>
-  <div>
+  <div class="container">
     <div class="row">
-      <div class="col-2"></div>
-      <div class="col-10 row">
+      <div class="col-12 row">
         <div class="col-3">
-          <img class="logo-aptech" src="/assets/images/logo-aptech.png" />
+          <img style="width: 100%;margin-bottom: 15px;" class="logo-aptech" src="/assets/images/logo-aptech.png" />
           <p>
             Hanoi-Aptech với hơn 22 năm kinh nghiệm đào tạo Lập trình viên
             (thành lập năm 2001) tự hào là nhà cung cấp dịch vụ đào tạo Công
@@ -97,7 +96,6 @@
           </ul>
         </div>
       </div>
-      <div class="col-1"></div>
     </div>
   </div>
 </footer>
