--- a/angular/symphony/src/app/components/user/layout/header/header.component.scss
+++ b/angular/symphony/src/app/components/user/layout/header/header.component.scss
@@ -1,9 +1,12 @@
 header {
   padding-bottom: 10px;
+
+}
+.main{
+  background-color: #ad1f1f;
 }
 .div-menu {
   padding: 20px 0 10px 0;
-  background-color: #ad1f1f;
   text-align: center;
 }
 .btn-advise {
@@ -23,14 +26,13 @@ header {
   font-weight: 400 !important;
 }
 .elementor-animation-shrink {
-  width: 45%;
+  width: 65%;
 }
 .elementor-element-b896070 {
   text-align: right;
 }
 
 .eael-simple-menu-horizontal {
-  margin-left: 20%;
   margin-bottom: 0;
 }
 
