--- a/angular/symphony/src/app/pages/user/homepages/register-consultation/register-consultation.component.css
+++ b/angular/symphony/src/app/pages/user/homepages/register-consultation/register-consultation.component.css
@@ -2,11 +2,6 @@
   background-color: #cf1515;
   padding: 50px 0;
 }
-:host {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-}
 .example-container mat-form-field + mat-form-field {
   margin-left: 8px;
 }
@@ -41,12 +36,13 @@ mat-form-field {
   margin-bottom: 0;
 
 }
-.div-populated{
-  width: 100%;
-}
+
 .elementskit-section-subtitle  {
   color: white;
   text-align: center;
   font-size: 17px;
   font-weight: 500;
+}
+.div-populated{
+  padding: 50px 0;
 }
