--- a/angular/symphony/src/app/pages/user/faq/faq.component.html
+++ b/angular/symphony/src/app/pages/user/faq/faq.component.html
@@ -1,7 +1,6 @@
-<div class="main-content">
+<div class="main-content container">
   <div class="row">
-    <div class="col-2"></div>
-    <div class="col-8">
+    <div class="col-12">
       <p class="title">Hỏi đáp - FAQ</p>
       <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
         <!-- Leaf node -->
@@ -35,6 +34,5 @@
         </mat-tree-node>
       </mat-tree>
     </div>
-    <div class="col-2"></div>
   </div>
 </div>
