--- a/angular/symphony/src/app/components/user/layout/header/header.component.html
+++ b/angular/symphony/src/app/components/user/layout/header/header.component.html
@@ -123,7 +123,7 @@
                 </div>
               </div>
               <div class="col-2" style="text-align: left">
-                <button class="btn-advise">
+                <button class="btn-advise" routerLink="/admissions">
                   <i aria-hidden="true" class="far fa-envelope"></i>
                   TƯ VẤN NGAY
                 </button>
