--- a/angular/symphony/src/app/components/user/layout/header/header.component.html
+++ b/angular/symphony/src/app/components/user/layout/header/header.component.html
@@ -112,8 +112,8 @@
                             id="menu-item-55280"
                             class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-55280"
                           >
-                            <a>GIỚI THIỆU</a>
-                            <a>LIÊN HỆ</a>
+                            <a routerLink="about">GIỚI THIỆU</a>
+                            <a routerLink="contact">LIÊN HỆ</a>
                             <a routerLink="faq">FAQ</a>
                           </li>
                         </ul>
