--- a/angular/symphony/src/app/pages/user/admissions/admissions.component.html
+++ b/angular/symphony/src/app/pages/user/admissions/admissions.component.html
@@ -194,45 +194,5 @@
       </div>
     </div>
   </div>
-  <div class="admissions__main-benefits">
-    <div class="main__benefit-title">
-      <h3>Quyền lợi học viên aptech</h3>
-    </div>
-    <div class="main__benefit-list">
-      <div class="container">
-        <div class="row">
-          <div class="col-6 col-md-4" *ngFor="let benefit of benefit_admissions">
-            <div class="main__benefit-item">
-              <div class="benefit__item-image">
-                <img [src]="benefit.image" alt="" />
-              </div>
-              <div class="benefit__item-text">
-                <div class="item__text-name"><h4>{{benefit.name}}</h4></div>
-                <div class="item__text-description">
-                  <p>{{benefit.description}}</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="admissions__main-partner">
-    <div class="main__partner-title">
-       <h3> Đối tác tuyển dụng</h3>
-    </div>
-    <div class="main__partner-list">
-        <div class="container">
-            <div class="row">
-                <div class="col-6 col-xs-4 col-md-2" *ngFor="let partner of partner_admissions">
-                    <div class="main__partner-item">
-                        <img [src]="partner.image" alt="">
-                    </div>
-                </div>
-            </div>
-        </div>
-        
-    </div>
-  </div>
+  <app-benefit-partner></app-benefit-partner>
 </div>
