--- a/angular/symphony/src/app/pages/user/home/home.component.html
+++ b/angular/symphony/src/app/pages/user/home/home.component.html
@@ -1,2 +1,3 @@
   <app-register-consultation></app-register-consultation>
   <app-list-course ></app-list-course>
+<app-benefit-partner></app-benefit-partner>
