--- a/angular/symphony/src/app/components/auth/login/login.component.html
+++ b/angular/symphony/src/app/components/auth/login/login.component.html
@@ -10,7 +10,7 @@
           </div>
           <div class="col-12 col-md-6">
             <div class="login__content-field">
-              <div class="content__field-title"><h2>Sing In</h2></div>
+              <div class="content__field-title"><h2>Sign In</h2></div>
               <div class="login__content-input">
                 <div class="content__input-field">
                   <div class="input__field-wrapper">
