--- a/angular/symphony/src/app/user/views/home/home.component.html
+++ b/angular/symphony/src/app/user/views/home/home.component.html
@@ -1,3 +1,5 @@
+<div class="main">
   <app-register-consultation></app-register-consultation>
-  <app-list-course ></app-list-course>
-<app-benefit-partner></app-benefit-partner>
+  <app-list-course></app-list-course>
+  <app-benefit-partner></app-benefit-partner>
+</div>
