--- a/angular/symphony/src/app/user/components/layout/header/header.component.html
+++ b/angular/symphony/src/app/user/components/layout/header/header.component.html
@@ -66,7 +66,7 @@
                             id="menu-item-62676"
                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-62676"
                           >
-                            <a routerLink="/admissions">TUYỂN SINH</a>
+                            <a routerLink="user/admissions">TUYỂN SINH</a>
                           </li>
                           <li
                             id="menu-item-52656"
@@ -112,9 +112,9 @@
                             id="menu-item-55280"
                             class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-55280"
                           >
-                            <a routerLink="about">GIỚI THIỆU</a>
-                            <a routerLink="contact">LIÊN HỆ</a>
-                            <a routerLink="faq">FAQ</a>
+                            <a routerLink="user/about">GIỚI THIỆU</a>
+                            <a routerLink="user/contact">LIÊN HỆ</a>
+                            <a routerLink="user/faq">FAQ</a>
                           </li>
                         </ul>
                       </div>
@@ -123,7 +123,7 @@
                 </div>
               </div>
               <div class="col-2" style="text-align: left">
-                <button class="btn-advise" routerLink="/admissions">
+                <button class="btn-advise" routerLink="user/admissions">
                   <i aria-hidden="true" class="far fa-envelope"></i>
                   TƯ VẤN NGAY
                 </button>
