--- a/angular/symphony/src/app/app.component.html
+++ b/angular/symphony/src/app/app.component.html
@@ -1,11 +1,8 @@
 <div class="main">
-  <app-header-user></app-header-user>
+  <app-header-user *ngIf="!isInAdminPage() && !isInAuthPage()"></app-header-user>
   <router-outlet> </router-outlet>
-  <app-footer-user></app-footer-user>
+  <app-footer-user *ngIf="!isInAdminPage() && !isInAuthPage()"></app-footer-user>
 </div>
-<ng-container *ngIf="isInAdminPage()">
-  <router-outlet></router-outlet>
-</ng-container>
 <!-- <ng-container *ngIf="isInAuthPage()">
   <router-outlet></router-outlet>
 </ng-container> -->
