--- a/angular/symphony/src/app/user/components/layout/header/header.component.html
+++ b/angular/symphony/src/app/user/components/layout/header/header.component.html
@@ -66,14 +66,14 @@
                             id="menu-item-62676"
                             class="menu-item menu-item-type-post_type menu-item-object-page menu-item-62676"
                           >
-                            <a routerLink="user/admissions">TUYỂN SINH</a>
+                            <a routerLink="user/admissions">Admissions</a>
                           </li>
                           <li
                             id="menu-item-52656"
                             class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-52656"
                           >
                             <a
-                              >KHÓA HỌC
+                              >Courses
                               <span class="eael-simple-menu-indicator">
                                 <i
                                   aria-hidden="true"
@@ -112,8 +112,8 @@
                             id="menu-item-55280"
                             class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-55280"
                           >
-                            <a routerLink="user/about">GIỚI THIỆU</a>
-                            <a routerLink="user/contact">LIÊN HỆ</a>
+                            <a routerLink="user/about">Abount us</a>
+                            <a routerLink="user/contact">Contact us</a>
                             <a routerLink="user/faq">FAQ</a>
                           </li>
                         </ul>
@@ -125,7 +125,7 @@
               <div class="col-2" style="text-align: left">
                 <button class="btn-advise" routerLink="user/admissions">
                   <i aria-hidden="true" class="far fa-envelope"></i>
-                  TƯ VẤN NGAY
+                  ADVISE NOW
                 </button>
               </div>
             </div>
