--- a/angular/symphony/src/app/user/views/homepages/list-course/list-course.component.html
+++ b/angular/symphony/src/app/user/views/homepages/list-course/list-course.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <h2 class="title">Các khóa học sắp khai giảng</h2>
+        <h2 class="title">The upcoming courses</h2>
         <div class="row">
           <div class="col-4" *ngFor="let partner of list_course">
             <div class="">
@@ -29,7 +29,7 @@
                         <i aria-hidden="true" class="fas fa-clock"></i>
                       </span>
                       <span class="elementor-icon-list-text"
-                        >Khai giảng: {{ partner.startTime }}</span
+                        >Opening: {{ partner.startTime }}</span
                       >
                     </a>
                   </li>
@@ -39,7 +39,7 @@
                         <i aria-hidden="true" class="fas fa-bookmark"></i>
                       </span>
                       <span class="elementor-icon-list-text"
-                        >Thời lượng: 2 - 2.5 năm</span
+                        >Duration: 2 - 2.5 năm</span
                       >
                     </a>
                   </li>
