--- a/angular/symphony/src/app/user/views/homepages/register-consultation/register-consultation.component.html
+++ b/angular/symphony/src/app/user/views/homepages/register-consultation/register-consultation.component.html
@@ -2,22 +2,18 @@
   <div class="container">
     <div class="row">
       <div class="col-8">
-        <img
-          style="width: 100%"
-          src="../../../../../assets/images/Banner-Hompages.png"
-        />
+        <img style="width: 100%" src="../../../../../assets/images/Banner-Hompages.png" />
       </div>
       <div class="col-4">
         <h2 class="title-form-consultation">
-          TRỞ THÀNH LẬP TRÌNH VIÊN QUỐC TẾ <br />
-          NGAY HÔM NAY!
+          To become an international programmer <br />
+          TODAY!
         </h2>
         <h3 class="elementskit-section-subtitle">
-          Nhận thông tin chi tiết về khóa học và học bổng
-        </h3>
+          Receive detailed information about the course and scholarships </h3>
         <form class="form-res-consultation">
           <mat-form-field>
-            <mat-label>Họ và tên</mat-label>
+            <mat-label>User name</mat-label>
             <input required matInput [formControl]="name" />
             @if (name.invalid) {
             <mat-error>{{ getErrorMessage() }}</mat-error>
@@ -26,12 +22,7 @@
           <div class="example-container">
             <mat-form-field>
               <mat-label>Email</mat-label>
-              <input
-                matInput
-                placeholder="pat@example.com"
-                [formControl]="email"
-                required
-              />
+              <input matInput placeholder="pat@example.com" [formControl]="email" required />
               @if (email.invalid) {
               <mat-error>{{ getErrorMessage() }}</mat-error>
               }
@@ -39,7 +30,7 @@
           </div>
           <div>
             <mat-form-field>
-              <mat-label>Số điện thoại</mat-label>
+              <mat-label>Phone</mat-label>
               <input required matInput [formControl]="phone" />
               @if (phone.invalid) {
               <mat-error>{{ getErrorMessage() }}</mat-error>
@@ -48,15 +39,15 @@
           </div>
           <div>
             <mat-form-field>
-              <mat-label>Trình độ</mat-label>
+              <mat-label>Level</mat-label>
               <mat-select>
-                <mat-option value="level1">Học sinh</mat-option>
-                <mat-option value="level2">Sinh viên</mat-option>
-                <mat-option value="level3">Người đi làm</mat-option>
+                <mat-option value="level1">Student</mat-option>
+                <mat-option value="level2">University student</mat-option>
+                <mat-option value="level3">Working professional</mat-option>
               </mat-select>
             </mat-form-field>
           </div>
-          <button class="btn-consultation">Tư vấn ngay</button>
+          <button class="btn-consultation">Advise now</button>
         </form>
       </div>
     </div>
@@ -67,8 +58,7 @@
     <div class="row">
       <div class="col-6">
         <h2 class="elementor-heading-title elementor-size-default">
-          "Chúng tôi không chạy theo công nghệ. <br />Symphony luôn đón đầu công
-          nghệ!"
+          "We don't chase technology. <br />Symphony always stays ahead in technology !"
         </h2>
         <img src="/assets/images/populated.png" />
       </div>
@@ -77,44 +67,29 @@
           <div class="elementor-container elementor-column-gap-wide row">
             <div class="col-6" style="padding: 20px">
               <figure class="elementor-image-box-img">
-                <img
-                  loading="lazy"
-                  decoding="async"
-                  width="100"
-                  height="180"
+                <img loading="lazy" decoding="async" width="100" height="180"
                   src="https://aptech.vn/wp-content/uploads/2022/04/medal_2.png"
-                  class="elementor-animation-grow attachment-full size-full wp-image-54900"
-                  alt=""
-                />
+                  class="elementor-animation-grow attachment-full size-full wp-image-54900" alt="" />
               </figure>
               <div class="elementor-image-box-content">
                 <h3 class="elementor-image-box-title">
-                  CÚP ĐƠN VỊ ĐÀO TẠO NHÂN LỰC CNTT SỐ 1 VN
+                  Number 1 IT Human Resource Training Cup in Vietnam
                 </h3>
                 <p class="elementor-image-box-description">
-                  trao bởi Hiệp hội phần mềm Việt Nam
-                </p>
+                  awarded by the Vietnam Software Association </p>
               </div>
             </div>
             <div class="col-6" style="padding: 20px">
               <figure class="elementor-image-box-img">
-                <img
-                  loading="lazy"
-                  decoding="async"
-                  width="100"
-                  height="180"
+                <img loading="lazy" decoding="async" width="100" height="180"
                   src="https://aptech.vn/wp-content/uploads/2022/04/medal_4.png.webp"
-                  class="elementor-animation-grow attachment-full size-full wp-image-54901"
-                  alt=""
-                />
+                  class="elementor-animation-grow attachment-full size-full wp-image-54901" alt="" />
               </figure>
               <div class="elementor-image-box-content">
                 <h3 class="elementor-image-box-title">
-                  CÚP ĐƠN VỊ ĐÀO TẠO CNTT XUẤT SẮC NHẤT VN
-                </h3>
+                  The Best Outstanding IT Training Unit Cup in Vietnam </h3>
                 <p class="elementor-image-box-description">
-                  trao bởi Hội Tin học TP. HCM trao
-                </p>
+                  Presented by the Ho Chi Minh City Computer Associatio </p>
               </div>
             </div>
           </div>
@@ -123,42 +98,27 @@
           <div class="row">
             <div class="col-6" style="padding: 20px">
               <figure class="elementor-image-box-img">
-                <img
-                  loading="lazy"
-                  decoding="async"
-                  width="100"
-                  height="180"
+                <img loading="lazy" decoding="async" width="100" height="180"
                   src="https://aptech.vn/wp-content/uploads/2022/04/medal_1.png"
-                  class="elementor-animation-grow attachment-full size-full wp-image-54902"
-                  alt=""
-                />
+                  class="elementor-animation-grow attachment-full size-full wp-image-54902" alt="" />
               </figure>
               <div class="elementor-image-box-content">
                 <h3 class="elementor-image-box-title">
-                  CÚP ĐÀO TẠO CNTT SỐ 1 VIỆT NAM
-                </h3>
+                  The Number 1 IT Training Cup in Vietnam </h3>
                 <p class="elementor-image-box-description">
-                  trao bởi Bộ Thông tin và Truyền thông
-                </p>
+                  Presented by the Ministry of Information and Communications </p>
               </div>
             </div>
             <div class="col-6" style="padding: 20px">
               <figure class="elementor-image-box-img">
-                <img
-                  loading="lazy"
-                  decoding="async"
-                  width="100"
-                  height="180"
+                <img loading="lazy" decoding="async" width="100" height="180"
                   src="https://aptech.vn/wp-content/uploads/2022/04/medal_3.png.webp"
-                  class="elementor-animation-grow attachment-full size-full wp-image-54903"
-                  alt=""
-                />
+                  class="elementor-animation-grow attachment-full size-full wp-image-54903" alt="" />
               </figure>
               <div class="elementor-image-box-content">
-                <h3 class="elementor-image-box-title">CÚP TINH HOA VIỆT NAM</h3>
+                <h3 class="elementor-image-box-title">The Essence of Vietnam Cup</h3>
                 <p class="elementor-image-box-description">
-                  trao bởi Hiệp hội Doanh nghiệp Việt Nam
-                </p>
+                  Presented by the Vietnam Enterprise Association </p>
               </div>
             </div>
           </div>
