--- a/angular/symphony/src/app/user/views/about-us/about-us.component.html
+++ b/angular/symphony/src/app/user/views/about-us/about-us.component.html
@@ -2,31 +2,22 @@
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <h1 class="title">Chào mừng các bạn đã đến với Symphony</h1>
+        <h1 class="title">Welcome to Symphony!</h1>
         <p class="sub-title">
           “We don’t keep up with technology. We stay ahead of it – Chúng tôi
           không chạy theo công nghệ. Chúng tôi đón đầu công nghệ!”
         </p>
-        <img
-          style="width: 100%; height: 600px"
-          src="/assets/images/aptech-about-us.png"
-        />
+        <img style="width: 100%; height: 600px" src="/assets/images/aptech-about-us.png" />
         <p class="description">
-          Aptech là công ty đi tiên phong trong lĩnh vực đào tạo Công Nghệ Thông
-          Tin và Truyền Thông Đa Phương Tiện, là công ty giáo dục nghề nghiệp
-          toàn cầu hàng đầu thế giới có trụ sở tại Mumbai, Ấn Độ. Chúng tôi đã
-          có kinh nghiệm đào tạo từ năm 1986. Với các trung tâm có mặt rộng khắp
-          tại Việt Nam, Aptech thực sự đã trở thành một trung tâm đào tạo uy tín
-          theo chuẩn quốc tế. Từ Hà Nội tới Thành phố Hồ Chí Minh, vì vậy dẫu
-          bạn đang ở đâu thì Aptech luôn nằm trong tầm tay của bạn. Tất cả các
-          trung tâm Aptech tại Việt Nam đều phù hợp với các tiêu chuẩn quốc tế.
-          Ngoài phương thức đào tạo được giảng viên hướng dẫn trực tiếp, thì ở
-          các trung tâm đều áp dụng đào tạo trực tuyến và kiểm tra trực tuyến.
-          Aptech luôn tin rằng có thể khai phá được tiềm năng của mỗi học viên
-          và mang sứ mệnh chắp cánh cho hàng triệu chuyên gia ngành CNTT cho
-          những doanh nghiệp hàng đầu thế giới. Dựa trên các giáo trình cập nhật
-          mới nhất với xu thế công nghệ thế giới, Aptech luôn dẫn đầu về việc
-          giáo dục và đào tạo các khoá học từ sơ cấp đến chuyên nghiệp.
+          is a pioneering company in the field of Information Technology and Multimedia Communication training, being a
+          leading global vocational education company headquartered in Mumbai, India. We have been providing training
+          since 1986. With centers located throughout Vietnam, Aptech has truly become a reputable training center
+          adhering to international standards. From Hanoi to Ho Chi Minh City, so wherever you are, Aptech is always
+          within your reach. All Aptech centers in Vietnam comply with international standards. In addition to
+          instructor-led training methods, online training and online testing are also implemented at all centers.
+          Aptech always believes in unlocking the potential of each student and fulfilling the mission of nurturing
+          millions of IT professionals for leading global enterprises. Based on the latest curriculum trends in the
+          world of technology, Aptech leads in educating and training courses from basic to professional levels.
         </p>
       </div>
     </div>
