--- a/angular/symphony/src/app/user/views/homepages/list-course/list-course.component.html
+++ b/angular/symphony/src/app/user/views/homepages/list-course/list-course.component.html
@@ -6,10 +6,10 @@
         <div class="row">
           <div class="col-4" *ngFor="let partner of list_course">
             <div class="">
-              <img [src]="partner.image" alt="" style="width: 100%" />
-              <p class="title-course">{{ partner.name }}</p>
+              <img [src]="partner.Image" alt="" style="width: 100%" />
+              <p class="title-course">{{ partner.Name }}</p>
               <p class="elementor-image-box-description">
-                {{ partner.description }}
+                {{ partner.Description }}
               </p>
               <div>
                 <ul class="elementor-icon-list-items">
@@ -19,7 +19,7 @@
                         <i aria-hidden="true" class="fas fa-gift"></i>
                       </span>
                       <span class="elementor-icon-list-text">{{
-                        partner.discount
+                        partner.Discount
                       }}</span>
                     </a>
                   </li>
@@ -29,7 +29,7 @@
                         <i aria-hidden="true" class="fas fa-clock"></i>
                       </span>
                       <span class="elementor-icon-list-text"
-                        >Opening: {{ partner.startTime }}</span
+                        >Opening: {{ partner.Start_time }}</span
                       >
                     </a>
                   </li>
