--- a/angular/symphony/src/app/user/views/about-us/about-us.component.html
+++ b/angular/symphony/src/app/user/views/about-us/about-us.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <h1 class="title">Chào mừng các bạn đã đến với Symphony</h1>
+        <h1 class="title">Welcome to Symphony!</h1>
         <p class="sub-title">
           “We don’t keep up with technology. We stay ahead of it – Chúng tôi
           không chạy theo công nghệ. Chúng tôi đón đầu công nghệ!”
