--- a/angular/symphony/src/app/user/components/layout/header/header.component.html
+++ b/angular/symphony/src/app/user/components/layout/header/header.component.html
@@ -112,7 +112,7 @@
                             id="menu-item-55280"
                             class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-55280"
                           >
-                            <a routerLink="user/about">Abount us</a>
+                            <a routerLink="user/about">About us</a>
                             <a routerLink="user/contact">Contact us</a>
                             <a routerLink="user/faq">FAQ</a>
                           </li>
