--- a/angular/symphony/src/app/user/views/faq/faq.component.css
+++ b/angular/symphony/src/app/user/views/faq/faq.component.css
@@ -4,9 +4,8 @@
 }
 .main-content{
     padding-top: 50px;
+    min-height: 500px;
 }
-mat-tree-node{
-    font-size: 20px;
-    font-weight: 400;
-    padding: 10px;
+.question{
+    padding: 20px
 }
