--- a/angular/symphony/src/app/user/views/faq/faq.component.html
+++ b/angular/symphony/src/app/user/views/faq/faq.component.html
@@ -2,37 +2,19 @@
   <div class="row">
     <div class="col-12">
       <p class="title">Hỏi đáp - FAQ</p>
-      <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
-        <!-- Leaf node -->
-        <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding>
-          <button mat-icon-button disabled></button>
-          {{ node.item }}
-        </mat-tree-node>
-        <mat-tree-node
-          *matTreeNodeDef="let node; when: hasChild"
-          matTreeNodePadding
-        >
-          <button
-            mat-icon-button
-            [attr.aria-label]="'Toggle ' + node.item"
-            (click)="loadChildren(node)"
-            matTreeNodeToggle
+      <div *ngFor="let item of faqs" class="question">
+        <mat-accordion>
+          <mat-expansion-panel
+            (opened)="panelOpenState = true"
+            (closed)="panelOpenState = false"
           >
-            <mat-icon class="mat-icon-rtl-mirror">
-              {{
-                treeControl.isExpanded(node) ? "expand_more" : "chevron_right"
-              }}
-            </mat-icon>
-          </button>
-          {{ node.item }}
-        </mat-tree-node>
-
-        <mat-tree-node *matTreeNodeDef="let node; when: isLoadMore">
-          <button mat-button (click)="loadMore(node.loadMoreParentItem)">
-            Load more...
-          </button>
-        </mat-tree-node>
-      </mat-tree>
+            <mat-expansion-panel-header>
+              <mat-panel-title> {{ item.question }} </mat-panel-title>
+            </mat-expansion-panel-header>
+            <p>{{ item.answer }}</p>
+          </mat-expansion-panel>
+        </mat-accordion>
+      </div>
     </div>
   </div>
 </div>
