add api class and about us

--- a/angular/symphony/src/app/admin/views/layout/layout.component.html
+++ b/angular/symphony/src/app/admin/views/layout/layout.component.html
@@ -5,7 +5,7 @@
         <img [src]="avatar" alt="Image Login" />
       </div>
       <div class="navbar__user-name">
-        <p>David Harrison</p>
+        <p>{{userInfo?.user_name}}</p>
       </div>
     </div>
     <div class="admin__navbar-menu">
