--- a/angular/symphony/src/app/admin/views/aboutUs/aboutUs.component.html
+++ b/angular/symphony/src/app/admin/views/aboutUs/aboutUs.component.html
@@ -1,57 +1,70 @@
-<div class="dialog__manage">
-    <div class="dialog__title">
-      <div class="dialog__title-name"><h4>Edit About us</h4></div>
+<div class="manage__admin">
+  <div class="manage__admin-create">
+    <div class="input-group">
+      <div class="form-outline" data-mdb-input-init>
+        <input
+          [(ngModel)]="user_name"
+          name="user_name"
+          type="search"
+          id="form1"
+          class="form-control"
+          placeholder="search by name"
+        />
+      </div>
+      <button (click)="handleSearchByName()" type="button" class="btn btn-primary" data-mdb-ripple-init>
+        <i class="fas fa-search"></i>
+      </button>
     </div>
-    <form #adminForm="ngForm" (ngSubmit)="onSubmit(adminForm)">
-      <div class="dialog__body">
-        <div class="form-group">
-          <label for="image_background">Image background</label>
-          <!-- Thay đổi input thành input file -->
-          <input
-            type="file"
-            class="form-control"
-            id="image_background"
-            name="image_background"
-            accept="image/*" 
-            (change)="onFileSelected($event)"
-          />
-          <div
-            class="file__upload"
-          >
-          <img *ngIf="detailAboutForm.image_background" [src]="detailAboutForm.image_background" alt="">
-          </div>
-        </div>
-  
-        <div class="form-group">
-          <label for="description">Description</label>
-          <input
-            type="text"
-            class="form-control"
-            id="description"
-            required
-            [(ngModel)]="detailAboutForm.description"
-            name="description"
-            #description="ngModel"
-          />
-          <div
-            *ngIf="description.invalid && description.touched"
-            class="alert alert-danger"
-          >
-            Image background is required.
-          </div>
-        </div>
-      </div>
-      <div class="dialog__footer">
-        <div class="dialog__footer-btn">
-          <button
-            class="btn__submit"
-            [disabled]="adminForm.invalid"
-            type="submit"
-          >
-            Submit
-          </button>
-        </div>
-      </div>
-    </form>
+    <div class="admin__create-btn">
+      <button mat-raised-button (click)="openDialog()">Create class</button>
   </div>
-  
+  </div>
+  <div class="manage__admin-list">
+    <div class="manage__admin-table">
+      <div class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource">
+          <ng-container matColumnDef="No">
+            <th mat-header-cell *matHeaderCellDef>No.</th>
+            <td mat-cell *matCellDef="let element; let i = index">
+              {{ i + 1 }}
+            </td>
+          </ng-container>
+
+          <ng-container matColumnDef="backgroundImage">
+            <th mat-header-cell *matHeaderCellDef>Image</th>
+            <td mat-cell *matCellDef="let element"><img [src]="element.backgroundImage "alt=""></td>
+          </ng-container>
+
+          <ng-container matColumnDef="description">
+            <th mat-header-cell *matHeaderCellDef>Description</th>
+            <td mat-cell *matCellDef="let element"><p>{{ element.description }}</p> </td>
+          </ng-container> 
+
+          <ng-container matColumnDef="action">
+            <th mat-header-cell *matHeaderCellDef>Action</th>
+            <td mat-cell *matCellDef="let element">
+              <div class="action__table">
+                <button class="btn__edit" (click)="openEditDialog(element)">
+                  Edit
+                </button>
+                <button class="btn__delete" (click)="handleDelete(element.id)">
+                  Delete
+                </button>
+              </div>
+            </td>
+          </ng-container>
+
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+        </table>
+
+        <mat-paginator
+          [pageSizeOptions]="[5, 10, 20]"
+          showFirstLastButtons
+          aria-label="Select page of periodic elements"
+        >
+        </mat-paginator>
+      </div>
+    </div>
+  </div>
+</div>
