--- a/angular/symphony/src/app/admin/views/aboutUs/aboutUs.component.scss
+++ b/angular/symphony/src/app/admin/views/aboutUs/aboutUs.component.scss
@@ -1,99 +1,78 @@
-.dialog__manage {
-  width: 100%;
-  position: relative;
-  background-color: #ffffff;
-  background-clip: padding-box;
-  border: 0;
-  border-radius: 8px;
-  box-shadow: 0 6px 16px 0 rgba(0, 0, 0, 0.08),
-    0 3px 6px -4px rgba(0, 0, 0, 0.12), 0 9px 28px 8px rgba(0, 0, 0, 0.05);
-  pointer-events: auto;
-  padding: 20px 24px;
+.manage__admin {
+  .manage__admin-create {
+   margin-bottom: 30px;
+   display: flex;
+   justify-content: space-between;
+   align-items: baseline;
 
-  .file__upload {
-    margin: 20px 0;
+   button {
+    cursor: pointer;
+   }
 
-    img {
-      width: 100%;
-      max-width: 400px;
-    }
-  }
-
-  .dialog__title {
-    display: flex;
-    justify-content: space-between;
-    .dialog__title-name {
-      color: rgba(0, 0, 0, 0.88);
-      background: #ffffff;
-      border-radius: 8px 8px 0 0;
-      margin-bottom: 8px;
-      padding: 0;
-      border-bottom: none;
-    }
-
-    .dialog__title-close {
-      cursor: pointer;
-    }
-  }
-
-  .dialog__body {
-    font-size: 14px;
-    line-height: 1.5714285714285714;
-    word-wrap: break-word;
-    padding: 0;
-
-    .form-group {
-        margin-top: 20px;
-    }
-  }
-
-  .dialog__footer {
-    text-align: end;
-    background: transparent;
-    margin-top: 20px;
-    padding: 0;
-    border-top: none;
-    border-radius: 0;
-    .dialog__footer-btn {
-      button {
-        background: #ffffff;
-        border-color: #d9d9d9;
-        color: rgba(0, 0, 0, 0.88);
-        box-shadow: 0 2px 0 rgba(0, 0, 0, 0.02);
-        font-size: 14px;
-        line-height: 1.5714285714285714;
-        height: 32px;
-        padding: 4px 15px;
-        border-radius: 6px;
-        outline: none;
-        position: relative;
-        display: inline-block;
-        font-weight: 400;
-        white-space: nowrap;
-        text-align: center;
-        border: 1px solid #cec9c9;
-        cursor: pointer;
-        transition: all 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
-        user-select: none;
-        touch-action: manipulation;
-      }
-
-      .btn__cancel {
-        &:hover {
-          color: #4096ff;
-          border-color: #4096ff;
+         .admin__create-btn {
+        margin-bottom: 30px;
+  
+        button {
+          padding: 10px;
+          border: none;
+          background-color: #1677ff;
+          color: white;
+          border-radius: 10px;
+          box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+          width: 150px;
         }
       }
+  }
 
-      .btn__submit {
-        margin-left: 10px;
-        background-color: #4096ff;
-        color: white;
+  .manage__admin-list {
+    .manage__admin-table {
+      table {
+        width: 100%;
 
-        &:hover {
-            opacity: 0.8;
+        p {
+          max-width: 200px;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
+
+        img {
+          width: 50px;
+          height: 50px;
+        }
+
+        .action__table {
+          width: 100%;
+
+          button {
+            padding: 2px 10px;
+            color: #0958d9;
+            background: #e6f4ff;
+            border-color: #91caff;
+            cursor: pointer;
+            font-size: 12px;
+            line-height: 20px;
+            list-style: none;
+            font-size: 12px;
+            line-height: 20px;
+            list-style: none;
+            border: 1px solid #d9d9d9;
+            border-radius: 4px;
+            opacity: 1;
+            transition: all 0.2s;
+            text-align: start;
+            position: relative;
+          }
+
+          .btn__delete {
+            margin-left: 5px;
+            color: #cf1322;
+            background: #fff1f0;
+            border-color: #ffa39e;
+          }
         }
       }
     }
   }
 }
+
