--- a/angular/symphony/src/app/admin/views/manageAdmin/manageAdmin.component.html
+++ b/angular/symphony/src/app/admin/views/manageAdmin/manageAdmin.component.html
@@ -1,7 +1,19 @@
 <div class="manage__admin">
   <div class="manage__admin-create">
-    <div class="admin__create-btn">
-        <button mat-raised-button (click)="openDialog()">Create admin</button>
+    <div class="input-group">
+      <div class="form-outline" data-mdb-input-init>
+        <input
+          [(ngModel)]="user_name"
+          name="user_name"
+          type="search"
+          id="form1"
+          class="form-control"
+          placeholder="search by name"
+        />
+      </div>
+      <button (click)="handleSearchByName()" type="button" class="btn btn-primary" data-mdb-ripple-init>
+        <i class="fas fa-search"></i>
+      </button>
     </div>
   </div>
   <div class="manage__admin-list">
@@ -10,12 +22,14 @@
         <table mat-table [dataSource]="dataSource">
           <ng-container matColumnDef="No">
             <th mat-header-cell *matHeaderCellDef>No.</th>
-            <td mat-cell *matCellDef="let element; let i = index">{{ i + 1 }}</td>
+            <td mat-cell *matCellDef="let element; let i = index">
+              {{ i + 1 }}
+            </td>
           </ng-container>
 
-          <ng-container matColumnDef="username">
+          <ng-container matColumnDef="user_name">
             <th mat-header-cell *matHeaderCellDef>User name</th>
-            <td mat-cell *matCellDef="let element">{{ element.username }}</td>
+            <td mat-cell *matCellDef="let element">{{ element.user_name }}</td>
           </ng-container>
 
           <ng-container matColumnDef="email">
@@ -37,10 +51,13 @@
             <th mat-header-cell *matHeaderCellDef>Action</th>
             <td mat-cell *matCellDef="let element">
               <div class="action__table">
-                <button class="btn__edit" (click)="openEditDialog(element)">Edit</button>
-                <button class="btn__delete" (click)="handleDelete(element.id)">Delete</button>
+                <button class="btn__edit" (click)="openEditDialog(element)">
+                  Edit
+                </button>
+                <button class="btn__delete" (click)="handleDelete(element.id)">
+                  Delete
+                </button>
               </div>
-            
             </td>
           </ng-container>
 
