--- a/angular/symphony/src/app/admin/views/manageAdmin/manageAdmin.component.scss
+++ b/angular/symphony/src/app/admin/views/manageAdmin/manageAdmin.component.scss
@@ -1,19 +1,10 @@
 .manage__admin {
   .manage__admin-create {
-    display: flex;
-    justify-content: flex-end;
-    .admin__create-btn {
-      margin-bottom: 30px;
+   margin-bottom: 30px;
 
-      button {
-        padding: 10px;
-        border: none;
-        background-color: #1677ff;
-        color: white;
-        border-radius: 10px;
-        box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
-      }
-    }
+   button {
+    cursor: pointer;
+   }
   }
 
   .manage__admin-list {
@@ -25,7 +16,7 @@
           width: 100%;
 
           button {
-              padding: 2px 10px;
+            padding: 2px 10px;
             color: #0958d9;
             background: #e6f4ff;
             border-color: #91caff;
@@ -55,3 +46,4 @@
     }
   }
 }
+
