--- a/angular/symphony/src/app/admin/views/manager-course/manager-course.component.html
+++ b/angular/symphony/src/app/admin/views/manager-course/manager-course.component.html
@@ -1,1 +1,77 @@
-<p>manager-course works!</p>
+<div class="manage__admin">
+    <div class="manage__admin-create">
+      <div class="admin__create-btn">
+          <button mat-raised-button (click)="openDialog()">Create</button>
+      </div>
+    </div>
+    <div class="manage__admin-list">
+      <div class="manage__admin-table">
+        <div class="mat-elevation-z8">
+          <table mat-table [dataSource]="dataSource">
+            <ng-container matColumnDef="No">
+              <th mat-header-cell *matHeaderCellDef>No.</th>
+              <td mat-cell *matCellDef="let element; let i = index">{{ i + 1 }}</td>
+            </ng-container>
+  
+            <ng-container matColumnDef="Name">
+              <th mat-header-cell *matHeaderCellDef>Name</th>
+              <td mat-cell *matCellDef="let element">{{ element.module_name }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="Code">
+                <th mat-header-cell *matHeaderCellDef>Code</th>
+                <td mat-cell *matCellDef="let element">{{ element.code }}</td>
+              </ng-container>
+  
+            <ng-container matColumnDef="Amount">
+              <th mat-header-cell *matHeaderCellDef>Amount</th>
+              <td mat-cell *matCellDef="let element">{{ element.amount }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="Discount">
+                <th mat-header-cell *matHeaderCellDef>Discount</th>
+                <td mat-cell *matCellDef="let element">{{ element.discount }}</td>
+              </ng-container>
+  
+              <ng-container matColumnDef="Description">
+                <th mat-header-cell *matHeaderCellDef>Description</th>
+                <td mat-cell *matCellDef="let element">{{ element.description }}</td>
+              </ng-container>
+
+            <ng-container matColumnDef="BackgoundImage">
+              <th mat-header-cell *matHeaderCellDef>BackgoundImage</th>
+              <td mat-cell *matCellDef="let element">{{ element.backGroundImage }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="Active">
+                <th mat-header-cell *matHeaderCellDef>Active</th>
+                <td mat-cell *matCellDef="let element">{{ element.active }}</td>
+              </ng-container>
+  
+
+            <ng-container matColumnDef="Action">
+              <th mat-header-cell *matHeaderCellDef>Action</th>
+              <td mat-cell *matCellDef="let element">
+                <div class="action__table">
+                  <button class="btn__edit" (click)="openEditDialog(element)">Edit</button>
+                  <button class="btn__delete" (click)="handleDelete(element.id)">Delete</button>
+                </div>
+              
+              </td>
+            </ng-container>
+  
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+          </table>
+  
+          <mat-paginator
+            [pageSizeOptions]="[5, 10, 20]"
+            showFirstLastButtons
+            aria-label="Select page of periodic elements"
+          >
+          </mat-paginator>
+        </div>
+      </div>
+    </div>
+  </div>
+  
